spade-tests/src/snapshots/spade_tests__typeinference__trunc_requires_number.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}

fn test(a: A) -> int<8> {
    trunc(a)
}


error: Argument type mismatch. Expected Number<_> got A
  ┌─ testinput:4:11
  │
3 │ fn test(a: A) -> int<8> {
  │            - Type A inferred here
4 │     trunc(a)
  │           ^ expected Number<_>
  │
  = note: Expected: Number<_>
               Got: A


